<resources>
    <string name="app_name">arwa_shamaly_project</string>
    <string name="game_name">Number series</string>
    <string name="btn_login">Login</string>
    <string name="btn_regester">Regester</string>
    <string name="et_login_user_name_hint">Username</string>
    <string name="et_login_password_hint">Password</string>
    <string name="checkbox_login_text">Remember me?</string>
    <string name="et_register_fullname_hint">Full name</string>
    <string name="et_register_email_hint">Email address</string>
    <string name="et_register_username_hint">Username</string>
    <string name="et_register_pass_hint">pass</string>
    <string name="et_register_re_pass_hint">Re-pass</string>
    <string name="register_rb_male">Male</string>
    <string name="register_rb_female">Female</string>
    <string name="btn_register_save">save</string>
    <string name="tv_register_birthdate">Birthdate</string>
    <string name="tv_score">0</string>
    <string name="tv_welcome">Welcome...</string>
    <string name="tv_games_fullname">user</string>
    <string name="tv_age">00</string>
    <string name="et_answer_hint">Enter a number</string>
    <string name="btn_check_answer">Check</string>
    <string name="btn_new_game">New game</string>
    <string name="btn_show_all_games">Show all games</string>
    <string name="btn_last_game_data">Show last game data</string>
    <string name="btn_change_pass">Change password</string>
    <string name="btn_clear_history">Clear game history</string>
    <string name="et_old_pass_hint">Enter old password</string>
    <string name="et_new_pass_hint">Enter new password</string>
    <string name="btn_save_new_pass">Save</string>



    <string-array name="country">
        <item>Palestine</item>
        <item>Ukraine</item>
        <item>Denmark</item>
        <item>France</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Egypt</item>
        <item>Sudan</item>
        <item>Saudi Arabia</item>
        <item>Emirates</item>
        <item>syria</item>
        <item>Jordan</item>
        <item>Iraq</item>
        <item>morocco</item>
        <item>Lebanon</item>
        <item>Australia</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>China</item>
    </string-array>


</resources>