<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Register_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_55sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_fullname"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/user_pass_shape"
                android:ems="10"
                android:hint="@string/et_register_fullname_hint"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_17ssp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_register_user"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_gravity="center"
                android:src="@drawable/user_picture" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/user_pass_shape"
            android:ems="10"
            android:hint="@string/et_register_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_17ssp" />

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/user_pass_shape"
            android:ems="10"
            android:hint="@string/et_register_username_hint"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:shadowColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_17ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/user_pass_shape"
                android:ems="10"
                android:hint="@string/et_register_pass_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:shadowColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_17ssp" />

            <EditText
                android:id="@+id/et_register_re_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/user_pass_shape"
                android:ems="10"
                android:hint="@string/et_register_re_pass_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_17ssp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/user_pass_shape"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/tv_register_birthdate"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp" />
        <Spinner
            android:id="@+id/sp_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_8sdp"
            android:entries="@array/country"
            android:spinnerMode="dialog"
            android:textSize="@dimen/_17ssp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_male"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/login_checkbox"
                android:checked="true"
                android:paddingStart="@dimen/_8sdp"
                android:text="@string/register_rb_male"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_female"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/login_checkbox"
                android:paddingStart="@dimen/_8ssp"
                android:text="@string/register_rb_female"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/main_tv_register_and_login_shape"
            android:text="@string/btn_register_save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp" />

    </LinearLayout>
</ScrollView>