<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Settings_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_all_games"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/user_pass_shape"
        android:gravity="start"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:text="@string/btn_show_all_games"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear_history"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/user_pass_shape"
        android:gravity="start"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:text="@string/btn_clear_history"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_pass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_pass"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/user_pass_shape"
        android:gravity="start"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:text="@string/btn_change_pass"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_last_game_data" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_last_game_data"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/user_pass_shape"
        android:gravity="start"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:text="@string/btn_last_game_data"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_all_games" />
</androidx.constraintlayout.widget.ConstraintLayout>