<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Change_password_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_old_pass"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/user_pass_shape"
        android:ems="10"
        android:hint="@string/et_old_pass_hint"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_nwe_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/main_tv_register_and_login_shape"
        android:text="@string/btn_save_new_pass"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_pass" />

    <EditText
        android:id="@+id/et_new_pass"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/user_pass_shape"
        android:ems="10"
        android:hint="@string/et_new_pass_hint"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_old_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>