<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".Game_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:text="@string/tv_score"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/tv_welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome">

                <TextView
                    android:id="@+id/tv_games_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/tv_games_fullname"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_age"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_num1"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/tv_num5"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toEndOf="@+id/tv_num4"
                app:layout_constraintTop_toBottomOf="@+id/tv_num2" />

            <TextView
                android:id="@+id/tv_num9"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_num8"
                app:layout_constraintTop_toBottomOf="@+id/tv_num6" />

            <TextView
                android:id="@+id/tv_num8"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toEndOf="@+id/tv_num7"
                app:layout_constraintTop_toBottomOf="@+id/tv_num5" />

            <TextView
                android:id="@+id/tv_num6"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.882"
                app:layout_constraintStart_toEndOf="@+id/tv_num5"
                app:layout_constraintTop_toBottomOf="@+id/tv_num3" />

            <TextView
                android:id="@+id/tv_num3"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_56sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toEndOf="@+id/tv_num2"
                app:layout_constraintTop_toBottomOf="@+id/tv_score" />

            <TextView
                android:id="@+id/tv_num2"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_56sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toEndOf="@+id/tv_num1"
                app:layout_constraintTop_toBottomOf="@+id/tv_score" />

            <TextView
                android:id="@+id/tv_num7"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_num4" />

            <TextView
                android:id="@+id/tv_num4"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/user_pass_shape"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

            <EditText
                android:id="@+id/et_answer"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/user_pass_shape"
                android:ems="10"
                android:hint="@string/et_answer_hint"
                android:inputType="number"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_num8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_check_answer"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/main_tv_register_and_login_shape"
                android:text="@string/btn_check_answer"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.411"
                app:layout_constraintStart_toEndOf="@+id/et_answer"
                app:layout_constraintTop_toBottomOf="@+id/tv_num9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_new_game"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/main_tv_register_and_login_shape"
                android:text="@string/btn_new_game"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.464"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_answer"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>